--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <h1 class="text-center my-5">Products List</h1>
-        <div class="row" id="div"></div>
+        <div class="row" id="div"><button onclick="foo()">show books</button></div>
     </div>
 
     <script src="main.js"></script>
